--- a/services/webserver/config/nginx.tmpl
+++ b/services/webserver/config/nginx.tmpl
@@ -10,38 +10,39 @@ http {
     gzip_types *;
 
     # http://nginx.org/en/docs/http/configuring_https_servers.html#optimization
-    ssl_session_cache shared:SSL:1m;
-    ssl_session_timeout 10m;
+    #ssl_session_cache shared:SSL:1m;
+    #ssl_session_timeout 10m;
 
     server_tokens off;
     
     upstream django {
         server webapp:8000;
     }
+    
+    # SSL support
+    #server {
+    #    # rewrite all HTTP to HTTPS
+    #    listen 80 default_server;
+    #    server_name {{ .Env.NGINX_SERVER_NAME }};
+
+    #    return 301 https://$http_host$request_uri;
+    #}
 
     server {
-        # rewrite all HTTP to HTTPS
-        listen 80 default_server;
-        server_name {{ .Env.NGINX_SERVER_NAME }};
+        # listen 443 ssl default_server;
+        # server_name {{ .Env.NGINX_SERVER_NAME }};
 
-        return 301 https://$http_host$request_uri;
-    }
+        # # see http://nginx.org/en/docs/http/configuriNGINX_https_servers.html
+        # {{if .Env.NGINX_CRT_NAME}}
+        #     ssl_certificate /etc/ssl/certs/{{ .Env.NGINX_CRT_NAME }};
+        #     ssl_certificate_key /etc/ssl/private/{{ .Env.NGINX_KEY_NAME }};
+        # {{else}}
+        #     ssl_certificate /etc/ssl/certs/localhost.crt;
+        #     ssl_certificate_key /etc/ssl/private/localhost.key;
+        # {{end}}
 
-    server {
-        listen 443 ssl default_server;
-        server_name {{ .Env.NGINX_SERVER_NAME }};
-
-        # see http://nginx.org/en/docs/http/configuriNGINX_https_servers.html
-        {{if .Env.NGINX_CRT_NAME}}
-            ssl_certificate /etc/ssl/certs/{{ .Env.NGINX_CRT_NAME }};
-            ssl_certificate_key /etc/ssl/private/{{ .Env.NGINX_KEY_NAME }};
-        {{else}}
-            ssl_certificate /etc/ssl/certs/localhost.crt;
-            ssl_certificate_key /etc/ssl/private/localhost.key;
-        {{end}}
-
-        ssl_prefer_server_ciphers on;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # ie defaults minus SSLv3
+        # ssl_prefer_server_ciphers on;
+        # ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # ie defaults minus SSLv3
 
         location /static {
             alias /srv/static-files;
